# Apollo-Test

./: .env.docker  .env.example  .gitattributes  .gitignore  .gitignore 2  5D_KNOWLEDGE_GRAPH_COMPLETE.md  7_LAYER_ARCHITECTURE 2.md  ADVANCED_AGENT_PROPOSAL.md  AGENTS_90_COMPLETE.md  AGENTS_UPGRADED_SUMMARY.md  AGENT_ARCHITECTURE 2.md  AGENT_CATEGORIZATION.md  AGENT_FILTERING_ARCHITECTURE.md  AGENT_FILTERING_FINAL.md  AGENT_FILTERING_REFINED 2.md  AGENT_INTELLIGENCE_UPGRADE.md  AGENT_LAYER_MAPPING.md  AGENT_MAPPING_STRATEGY.md  AGENT_METADATA_SPECIFICATION 2.md  AGENT_MIGRATION_PROGRESS.md  AGENT_SYNC_SUMMARY.md  AGENT_UPGRADE_STATUS.md  AI_GUIDED_DEPLOYMENT_RECONCILIATION.md  AI_GUIDED_RECONCILIATION.md  AKASHIC_ANALYSIS_COMPLETE.md  AKASHIC_APOLLO_INTEGRATION 2.md  AKASHIC_ARCHITECTURE.md  AKASHIC_COMPLETE_STANDARD.md  AKASHIC_COMPLETE_WORKFLOW.md  AKASHIC_DEPLOY_STRUCTURE.md  AKASHIC_ENHANCEMENTS_COMPLETE 2.md  AKASHIC_FOLDERS_FIXED.md  AKASHIC_FOLDER_STRUCTURE_FINAL.md  AKASHIC_IDE_INTEGRATION.md  AKASHIC_INTELLIGENT_SCAFFOLDING.md  AKASHIC_OUTPUT_GUIDE.md  AKASHIC_OUTPUT_IMPROVEMENTS.md  ANALYSIS_TROUBLESHOOTING.md  API_CONTINUOUS_MONITORING.md  API_INTEGRATION_GUIDE 2.md  (+159 more)
agents/: __init__.py  base 2.py  base_agent.py  discovery 2.py  factory.py  registry.py  universal_vault_agent.py
api/: agent_api 2.py  akashic_intelligence_endpoints.py  chat_endpoints.py  code_endpoints.py  codebase_endpoints.py  connectors.py  data_ingestion_api.py  folder_analysis_endpoints 2.py  learning_endpoints.py  main 2.py  main_old.py  main_smart.py  models_endpoints.py  smart_router.py  (+5 more)
(+494 files in other folders)
